Prevent address violation problem when disassembling corrupt aarch64 binary.

PR binutils/21595
	* aarch64-dis.c (aarch64_ext_ldst_reglist): Check for an out of
	range value.